--- a/SCSS/components/_aboutUs.scss
+++ b/SCSS/components/_aboutUs.scss
@@ -16,7 +16,7 @@
    }
 }
 .moreInfo{
-   margin: 3rem 0;
+   padding: 6rem 0;
    display: flex;
    justify-content: center;
    align-items: center;
@@ -66,8 +66,8 @@
    }
 }
 .about{
-   margin-top: 4rem;
-   .col-md-12{
-      padding: 0 32px;
-   }
+ padding: 4rem 32px;
+}
+.margin{
+   margin: 4rem;
 }
