--- a/SCSS/components/_gridSection.scss
+++ b/SCSS/components/_gridSection.scss
@@ -8,6 +8,8 @@
       cursor: pointer;
       img{
         opacity: 0.8;
+        transition: all 0.3s ease-in-out;
+        transform: scale(1.01); 
       }
     }
   }
@@ -20,6 +22,8 @@
       cursor: pointer;
       img{
         opacity: 0.8;
+        transition: all 0.3s ease-in-out;
+        transform: scale(1.01); 
       }
     }
   }
