--- a/SCSS/components/_hero.scss
+++ b/SCSS/components/_hero.scss
@@ -1,41 +1,47 @@
 /* HERO */
-.ij-hero {
-  position: relative; /* Add relative positioning to the container */
-  overflow: hidden; /* Ensure the image doesn't overflow the container */
-  padding: 0rem 0 3rem 0 !important;
-
-  &__item {
-    position: relative; /* Add relative positioning to the item */
-    display: flex;
-    align-items: flex-end; /* Align items to the bottom */
-    height: 100%;
-    justify-content: center;
+header{
+  padding-top: 6rem;
+  @media (max-width: 992px) {
+    padding-top: 6rem;
   }
-
-  &__image {
-     opacity: 0.9;
-     width: 100%; /* Make the image fill the container */
-     height: 50vh;
-     object-fit: cover;
-  }
-
-  &__content {
-    z-index: 1; /* Ensure content appears above the image */
-    padding: 0 32px;
-    max-width: 1440px;
-    display: flex;
-    justify-content: end;
-    width: 100%;
-
-    h1 {
-      margin-bottom: 2rem;
-      font-size: $h1;
+  .ij-hero {
+    position: relative; /* Add relative positioning to the container */
+    overflow: hidden; /* Ensure the image doesn't overflow the container */
+  
+    &__item {
+      position: relative; /* Add relative positioning to the item */
+      display: flex;
+      align-items: flex-end; /* Align items to the bottom */
+      height: 100%;
+      justify-content: center;
     }
-    p {
-      width: 50%;
+  
+    &__image {
+       opacity: 0.9;
+       width: 100%; /* Make the image fill the container */
+       height: 50vh;
+       object-fit: cover;
     }
-
-    /* Add positioning for the content */
-    position: absolute;
+  
+    &__content {
+      z-index: 1; /* Ensure content appears above the image */
+      padding: 0 32px;
+      max-width: 1440px;
+      display: flex;
+      justify-content: end;
+      width: 100%;
+  
+      h1 {
+        margin-bottom: 2rem;
+        font-size: $h1;
+      }
+      p {
+        width: 50%;
+      }
+  
+      /* Add positioning for the content */
+      position: absolute;
+    }
   }
 }
+
