--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -16,6 +16,7 @@ $white: #fff;
 $beige: #E1C9C1;
 $gray: #868585;
 $green: #787d62;
+$dark-beige: #BFA8A3;
 
 // Font
 $openSans: 'Open Sans', sans-serif;
