--- a/SCSS/components/_goBack.scss
+++ b/SCSS/components/_goBack.scss
@@ -2,6 +2,7 @@
    a{
       font-size: 1rem;
       text-decoration: none;
+      display: flex;
       i{
          margin-right: 0.5rem;
       }
