--- a/SCSS/components/_moreInfo.scss
+++ b/SCSS/components/_moreInfo.scss
@@ -10,10 +10,10 @@
       background-color: $white;
       > div {
          text-align: center;
-         margin-bottom: 1rem;
+         margin-bottom: 1.25rem;
       }
       h1 {
-         margin: 1rem 0 0 0 !important;
+         margin: 1rem 0 0.5rem 0 !important;
       }
       .goBack {
          text-decoration: none;
@@ -36,11 +36,61 @@
             }
          }
       }
+      .ij-db {
+         @media (max-width: 384px) {
+            a:nth-child(1) {
+               margin-bottom: 1rem;
+            }
+         }
+      }
    }
 }
 
 .learn {
    background: url("/assets/img/learn.webp");
-   background: url("https://raw.githubusercontent.com/johanssonida1996/Klarhet/main/assets/img/anna/L%C3%A4ra.webp");
+   background: url("https://raw.githubusercontent.com/johanssonida1996/Klarhet/main/assets/img/learn.webp");
    background-size: cover;
+   background-position: center;
+}
+.selfLove {
+   background: url("/assets/img/selfLove.webp");
+   background: url("https://raw.githubusercontent.com/johanssonida1996/Klarhet/main/assets/img/selfLove.webp");
+   background-size: cover;
+   background-position: center;
+}
+.search {
+   background: url("/assets/img/search.webp");
+   background: url("https://raw.githubusercontent.com/johanssonida1996/Klarhet/main/assets/img/search.webp");
+   background-size: cover;
+   background-position: center;
+}
+.live {
+   background: url("/assets/img/live.webp");
+   background: url("https://raw.githubusercontent.com/johanssonida1996/Klarhet/main/assets/img/live.webp");
+   background-size: cover;
+   background-position: center;
+}
+.listen {
+   background: url("/assets/img/listen.webp");
+   background: url("https://raw.githubusercontent.com/johanssonida1996/Klarhet/main/assets/img/listen.webp");
+   background-size: cover;
+   background-position: center;
+}
+.leadership {
+   background: url("/assets/img/leadership.webp");
+   background: url("https://raw.githubusercontent.com/johanssonida1996/Klarhet/main/assets/img/leadership.webp");
+   background-size: cover;
+   background-position: center;
+}
+.longing {
+   background: url("/assets/img/longing.webp");
+   background: url("https://raw.githubusercontent.com/johanssonida1996/Klarhet/main/assets/img/longing.webp");
+   background-size: cover;
+   background-position: center;
+}
+.play {
+   background: url("/assets/img/play.webp");
+   background: url("https://raw.githubusercontent.com/johanssonida1996/Klarhet/main/assets/img/play.webp");
+   background-size: cover;
+   background-position: center;
 }
